<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>MiraiMC</artifactId>
        <groupId>io.github.dreamvoid</groupId>
        <version>1.9.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>MiraiMC-Bukkit</artifactId>

    <name>${project.artifactId}</name>
    <description>Mirai for Minecraft server</description>
    <url>https://github.com/DreamVoid/MiraiMC</url>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>DreamVoid</name>
            <email>i@dreamvoid.me</email>
            <organization>DreamVoid</organization>
            <organizationUrl>https://github.com/DreamVoid</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/DreamVoid/MiraiMC.git</connection>
        <developerConnection>scm:git:ssh://github.com:DreamVoid/MiraiMC.git</developerConnection>
        <url>https://github.com/DreamVoid/MiraiMC</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>paper-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.github.dreamvoid</groupId>
            <artifactId>MiraiMC-Base</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <!--This adds the Spigot API artifact to the build -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.6-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <minimizeJar>false</minimizeJar>
                    <!--
                    <relocations>
                        <relocation>
                            <pattern>org.apache</pattern>
                            <shadedPattern>me.dreamvoid.miraimc.libraries.org.apache</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*</exclude>
                                <exclude>mozilla/public-suffix-list.txt</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <copy file="${project.build.directory}/MiraiMC-Bukkit.jar" tofile="../target/MiraiMC-Bukkit.jar"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>